config/istio/sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: shutdown-simulator
spec:
  workloadSelector:
    labels:
      app: shutdown-simulator
  egress:
  - hosts:
    - "istio-system/*"
    - "./*"
