config/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: echoserver
spec:
  hosts:
  - echoserver.example.com
  - echoserver.default.svc.cluster.local
  gateways:
  - echoserver-gateway
  - mesh
  http:
  - name: "echoserver-route"
    route:
    - destination:
        host: echoserver
        port:
          number: 80
      weight: 100
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: gateway-error,connect-failure,refused-stream,503
    timeout: 0s
